# mcp--project_stargazing_ai_guide

./: .gitignore  README.md  index.html  replace_secret.py  script.js
.devcontainer/: devcontainer.json
Backend/: .env.example  README.md  app.py  app2.py  app3.py  client.py  client2.py  client3.py  main.py  mcp_client.py  object_names.json  oldapp.py  oldclient.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_client.py  test1.1.py  test1.2.py  test1.3.py  test1.4.py  test1.py  test2.1.py  test2.2.py  test3.py
Frontend/: .gitignore  README.md  style.css
MCP_Server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  star_info.json  test.py  test_tools.py  tools.py  weather.py
