[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.14",
    "fastmcp>=3.2.4",
    "streamlit>=1.36.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
